# owl-wms

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  dec_dist.yml  pyproject.toml  requirements-dev.txt  requirements.txt  rewards.py  tensorrt_inference_research.md  tensorrt_integration_plan.md  train.py
.claude/agents/: audio-lead.md  code-reviewer.md  infra-lead.md  prod-lead.md  testing-lead.md  video-lead.md
.devcontainer/: devcontainer.json
configs/: av_ddpo.yml  av_peter.yml  av_v4_8x8.yml  av_v5_8x8_weak.yml  basic_ddpo.yml  causvid.yml  craft_v1.yml  debug_self_forcing.yaml  dit_v4_distill.yml  dit_v4_dmd.yml  robot_v1.yml  robot_v1_bidirectional.yml  robot_v1_bidirectional_depth.yml  robot_v1_medium.yml  robot_v1_medium_depth.yml  robot_v1_small.yml  self_forcing.yaml  world_v1.yml  world_v1_small.yml
configs/owl_vaes/: cod_128x.yml  cod_64x_c64_depth.yml
configs/webapp/: config.yaml
docs/proposals/: fp8_kv_flexattention.md  mx_formats_full_report.md  mxfp_inference_transition.md  ring_buffer_proposal.md
inference/: build_cache_object.py  causvid_pipeline.py  decoder_test.py  game.py  model_cache_test.py  model_fp8_test.py  model_test.py  test_sampling.py
owl_wms/: configs.py  muon.py  schedulers.py
owl_wms/data/: __init__.py  cod_latent.py  latent_seq_packing.py  multi.py  s3_cod_latent_audio.py  wan_distillation_loader.py
owl_wms/experiments/: opt_flow.py
owl_wms/models/: __init__.py  causal_gamerft.py  gamerft.py  gamerft_audio.py  gamerft_shortcut.py  world.py
owl_wms/nn/: __init__.py  attn.py  embeddings.py  kv_cache.py  mlp.py  mmattn.py  modulation.py  mxfp.py  quantized_linear.py  rope.py
owl_wms/quant/: fp8_kv.py  kv_triton.py
owl_wms/sampling/: __init__.py  av_caching.py  av_caching_v2.py  av_window.py  cfg.py  schedulers.py  self_forcing_sampler.py  shortcut_sampler.py  simple.py  video_window.py  window.py
owl_wms/trainers/: __init__.py  av_trainer.py  base.py  causvid.py  ddpo_trainer.py  gamerft_trainer.py  rft_pair_distill_trainer.py  rft_trainer.py  self_forcing.py  self_forcing_test.py  world_trainer.py
owl_wms/utils/: __init__.py  ddp.py  flow_match_scheduler.py  logging.py  owl_vae_bridge.py  vis.py
profiling/: README.md  generic_forward.py  inductor_compile.py  inductor_options.md  profiler.py  tensorrt_compile.py  timing.py
tests/: conftest.py  test_perf_tensorrt_vs_torch.py  test_phase2_onnx_export.py  test_phase3_tensorrt_integration.py  test_phase4_cache_management.py  test_phase4_comprehensive.py  test_phase4_memory_soak.py  test_tensorrt_integration.py
webapp/: action_builder.py  action_converter.py  config.yaml  demo.py  demo_streaming.py  models.py  render.py  samplers.py  server.py  streaming.py  user_session.py  webapp_config.yaml
webapp/checkpoints/: shortcut.yaml
webapp/static/: index.html  todo
webapp/utils/: action_builder.py  av_window_inference_pipeline.py  configs.py  create_samplers.py  demo_streaming.py  icml_pipeline.py  models.py  (+3 more)
(+6 files in other folders)
